# pycom-esp-idf

./: .gitignore  .gitmodules  .project  Kconfig
components/app_trace/: app_trace_util.c
components/app_update/: CMakeLists.txt  component.mk  esp_ota_ops.c
components/aws_iot/port/: network_mbedtls_wrapper.c
components/bootloader/subproject/: CMakeLists.txt  Makefile
components/bootloader/subproject/main/: CMakeLists.txt  bootloader_start.c  pycom_bootloader.c  pycom_bootloader.h  pycom_bootmgr.c  pycom_gpio.c  pycom_mperror.c
components/bootloader_support/: CMakeLists.txt
components/bootloader_support/include/: Pycom_bootloader.h  pycom_bootloader_support.h
components/bootloader_support/src/: bootloader_common.c  bootloader_utility.c  esp_image_format.c  flash_partitions.c  pycom_bootloader_support.c  secure_boot.c  secure_boot_signatures.c
components/console/: esp_console_repl.c
components/driver/: dma.c  i2c.c  spi.c  uart.c
components/driver/test/: test_uart.c
components/esp32/: Kconfig  clk.c  core_dump.c  cpu_start.c  esp_timer_esp32.c  event_default_handlers.c  hw_random.c  ipc.c  pm_esp32.c  sleep_modes.c  system_api.c
components/esp_netif/: esp_netif_objects.c
components/freertos/: port.c  portmux_impl.h  tasks.c  xtensa_init.c
components/newlib/: time.c
components/openthread/: component.mk
components/se050/: component.mk
components/spi_flash/: esp_flash_spi_init.c  flash_mmap.c  flash_ops.c
components/tfmicro/: ml.h
components/ulp/: ulp.c
components/wpa_supplicant/: CMakeLists.txt  component.mk
tools/: tools.json
(+125 files in other folders)
